tools/c7n_azure/tests_azure/cassettes/NetworkSecurityGroupTest.test_remove_rules_removes_matched_ingress_rule.json
{
    "version": 1,
    "interactions": [
        {
            "request": {
                "method": "GET",
                "uri": "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/providers/Microsoft.Network/networkSecurityGroups?api-version=2024-05-01",
                "body": null,
                "headers": {}
            },
            "response": {
                "status": {
                    "code": 200,
                    "message": "OK"
                },
                "headers": {
                    "x-ms-throttle-levels": [
                        "operationConcurrencyPct=0.5, subscriptionReadRatePct=0.2, etc"
                    ],
                    "x-ms-original-request-ids": [
                        "2e07a321-a603-46b9-9d1b-e1a9272a34e0"
                    ],
                    "x-ms-ratelimit-remaining-subscription-global-reads": [
                        "3749"
                    ],
                    "x-ms-arm-service-request-id": [
                        "786eca44-f386-4add-80c2-3fb207691add"
                    ],
                    "content-length": [
                        "5862"
                    ],
                    "cache-control": [
                        "no-cache"
                    ],
                    "x-msedge-ref": [
                        "Ref A: 86290B88D35F4B4097035C9D4483F825 Ref B: CH1AA2020620035 Ref C: 2026-09-28T20:26:34Z"
                    ],
                    "x-cache": [
                        "CONFIG_NOCACHE"
                    ],
                    "date": [
                        "Mon, 28 Sep 2026 20:26:34 GMT"
                    ],
                    "content-type": [
                        "application/json; charset=utf-8"
                    ]
                },
                "body": {
                    "data": {
                        "value": [
                            {
                                "name": "c7n-nsg-remove-rules",
                                "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules",
                                "etag": "W/\"9d4bec51-8412-4d9d-b846-4c5a724292ff\"",
                                "type": "Microsoft.Network/networkSecurityGroups",
                                "location": "southcentralus",
                                "properties": {
                                    "provisioningState": "Succeeded",
                                    "resourceGuid": "7a749cea-eac1-420b-9cc9-66b20cd394c5",
                                    "securityRules": [
                                        {
                                            "name": "allow-all-inbound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/securityRules/allow-all-inbound",
                                            "etag": "W/\"9d4bec51-8412-4d9d-b846-4c5a724292ff\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 100,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ],
                                    "defaultSecurityRules": [
                                        {
                                            "name": "AllowVnetInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/defaultSecurityRules/AllowVnetInBound",
                                            "etag": "W/\"9d4bec51-8412-4d9d-b846-4c5a724292ff\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowAzureLoadBalancerInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                                            "etag": "W/\"9d4bec51-8412-4d9d-b846-4c5a724292ff\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from azure load balancer",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "AzureLoadBalancer",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/defaultSecurityRules/DenyAllInBound",
                                            "etag": "W/\"9d4bec51-8412-4d9d-b846-4c5a724292ff\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all inbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowVnetOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/defaultSecurityRules/AllowVnetOutBound",
                                            "etag": "W/\"9d4bec51-8412-4d9d-b846-4c5a724292ff\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowInternetOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/defaultSecurityRules/AllowInternetOutBound",
                                            "etag": "W/\"9d4bec51-8412-4d9d-b846-4c5a724292ff\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to Internet",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "Internet",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/defaultSecurityRules/DenyAllOutBound",
                                            "etag": "W/\"9d4bec51-8412-4d9d-b846-4c5a724292ff\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all outbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ]
                                }
                            }
                        ]
                    }
                }
            }
        },
        {
            "request": {
                "method": "DELETE",
                "uri": "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/securityRules/allow-all-inbound?api-version=2024-05-01",
                "body": null,
                "headers": {}
            },
            "response": {
                "status": {
                    "code": 202,
                    "message": "Accepted"
                },
                "headers": {
                    "content-length": [
                        "0"
                    ],
                    "x-msedge-ref": [
                        "Ref A: 0CDB434A7CE64774A469896F45425667 Ref B: CHI261140506042 Ref C: 2026-09-28T20:26:35Z"
                    ],
                    "location": [
                        "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/providers/Microsoft.Network/locations/southcentralus/operationResults/2e31ee44-4ca9-4b74-8025-ac68c1e03891?api-version=2024-05-01&t=639262239954280163&c=MIIHlDCCBnygAwIBAgIQEWqq0LXHm9_RoSQk3rtLtzANBgkqhkiG9w0BAQsFADA2MTQwMgYDVQQDEytDQ01FIEcxIFRMUyBSU0EgMjA0OCBTSEEyNTYgMjA0OSBXVVMyIENBIDAxMB4XDTI2MDkyMzA2MDIzOVoXDTI2MTIxODEyMDIzOVowQDE-MDwGA1UEAxM1YXN5bmNvcGVyYXRpb25zaWduaW5nY2VydGlmaWNhdGUubW [...]
                    ],
                    "x-ms-throttle-levels": [
                        "operationRatePct=0.1, operationConcurrencyPct=0.3, subscriptionWriteRatePct=0.4, etc"
                    ],
                    "date": [
                        "Mon, 28 Sep 2026 20:26:35 GMT"
                    ],
                    "x-cache": [
                        "CONFIG_NOCACHE"
                    ],
                    "cache-control": [
                        "no-cache"
                    ],
                    "x-ms-arm-service-request-id": [
                        "f8d30418-d7ba-4f10-a8bd-3cdedbc49c76"
                    ],
                    "x-ms-ratelimit-remaining-subscription-global-deletes": [
                        "2999"
                    ],
                    "x-ms-ratelimit-remaining-subscription-deletes": [
                        "199"
                    ],
                    "azure-asyncnotification": [
                        "Enabled"
                    ],
                    "azure-asyncoperation": [
                        "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/providers/Microsoft.Network/locations/southcentralus/operations/2e31ee44-4ca9-4b74-8025-ac68c1e03891?api-version=2024-05-01&t=639262239954280163&c=MIIHlDCCBnygAwIBAgIQEWqq0LXHm9_RoSQk3rtLtzANBgkqhkiG9w0BAQsFADA2MTQwMgYDVQQDEytDQ01FIEcxIFRMUyBSU0EgMjA0OCBTSEEyNTYgMjA0OSBXVVMyIENBIDAxMB4XDTI2MDkyMzA2MDIzOVoXDTI2MTIxODEyMDIzOVowQDE-MDwGA1UEAxM1YXN5bmNvcGVyYXRpb25zaWduaW5nY2VydGlmaWNhdGUubWFuYWdl [...]
                    ]
                },
                "body": {
                    "string": ""
                }
            }
        },
        {
            "request": {
                "method": "GET",
                "uri": "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/providers/Microsoft.Network/locations/southcentralus/operations/2e31ee44-4ca9-4b74-8025-ac68c1e03891?api-version=2024-05-01&t=639262239954280163&c=MIIHlDCCBnygAwIBAgIQEWqq0LXHm9_RoSQk3rtLtzANBgkqhkiG9w0BAQsFADA2MTQwMgYDVQQDEytDQ01FIEcxIFRMUyBSU0EgMjA0OCBTSEEyNTYgMjA0OSBXVVMyIENBIDAxMB4XDTI2MDkyMzA2MDIzOVoXDTI2MTIxODEyMDIzOVowQDE-MDwGA1UEAxM1YXN5bmNvcGVyYXRpb25zaWduaW5nY2VydGlmaWNhdGUubWFuYWdlb [...]
                "body": null,
                "headers": {}
            },
            "response": {
                "status": {
                    "code": 200,
                    "message": "OK"
                },
                "headers": {
                    "x-ms-throttle-levels": [
                        "operationConcurrencyPct=0.5, subscriptionReadRatePct=0.2, etc"
                    ],
                    "x-ms-ratelimit-remaining-subscription-global-reads": [
                        "3749"
                    ],
                    "x-ms-arm-service-request-id": [
                        "4844ce2c-f7d6-4621-b6f5-e31173ff00ac"
                    ],
                    "content-length": [
                        "22"
                    ],
                    "cache-control": [
                        "no-cache"
                    ],
                    "x-msedge-ref": [
                        "Ref A: 82C65C3FDD2D40E9A19B09D94B00C158 Ref B: CHI261140511036 Ref C: 2026-09-28T20:26:35Z"
                    ],
                    "x-cache": [
                        "CONFIG_NOCACHE"
                    ],
                    "date": [
                        "Mon, 28 Sep 2026 20:26:35 GMT"
                    ],
                    "content-type": [
                        "application/json; charset=utf-8"
                    ]
                },
                "body": {
                    "data": {
                        "status": "Succeeded"
                    }
                }
            }
        },
        {
            "request": {
                "method": "GET",
                "uri": "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/providers/Microsoft.Network/locations/southcentralus/operationResults/2e31ee44-4ca9-4b74-8025-ac68c1e03891?api-version=2024-05-01&t=639262239954280163&c=MIIHlDCCBnygAwIBAgIQEWqq0LXHm9_RoSQk3rtLtzANBgkqhkiG9w0BAQsFADA2MTQwMgYDVQQDEytDQ01FIEcxIFRMUyBSU0EgMjA0OCBTSEEyNTYgMjA0OSBXVVMyIENBIDAxMB4XDTI2MDkyMzA2MDIzOVoXDTI2MTIxODEyMDIzOVowQDE-MDwGA1UEAxM1YXN5bmNvcGVyYXRpb25zaWduaW5nY2VydGlmaWNhdGUubWF [...]
                "body": null,
                "headers": {}
            },
            "response": {
                "status": {
                    "code": 204,
                    "message": "No Content"
                },
                "headers": {
                    "x-msedge-ref": [
                        "Ref A: 5F06D461FF6B4E03BAA2334CACA170ED Ref B: CHI261140509040 Ref C: 2026-09-28T20:26:36Z"
                    ],
                    "location": [
                        "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/providers/Microsoft.Network/locations/southcentralus/operationResults/2e31ee44-4ca9-4b74-8025-ac68c1e03891?api-version=2024-05-01&t=639262239964451012&c=MIIHxDCCBqygAwIBAgIRAK3GpGj7DjHLrjRJRX_HEXgwDQYJKoZIhvcNAQELBQAwNTEzMDEGA1UEAxMqQ0NNRSBHMSBUTFMgUlNBIDIwNDggU0hBMjU2IDIwNDkgQ1VTIENBIDAxMB4XDTI2MDkxNzE5NDgyOFoXDTI2MTIxMzAxNDgyOFowQDE-MDwGA1UEAxM1YXN5bmNvcGVyYXRpb25zaWduaW5nY2VydGlmaWNhdGUubW [...]
                    ],
                    "x-ms-throttle-levels": [
                        "operationConcurrencyPct=0.5, subscriptionReadRatePct=0.2, etc"
                    ],
                    "date": [
                        "Mon, 28 Sep 2026 20:26:36 GMT"
                    ],
                    "x-cache": [
                        "CONFIG_NOCACHE"
                    ],
                    "content-type": [
                        "application/json; charset=utf-8"
                    ],
                    "x-ms-arm-service-request-id": [
                        "f8d30418-d7ba-4f10-a8bd-3cdedbc49c76"
                    ],
                    "x-ms-ratelimit-remaining-subscription-global-reads": [
                        "3749"
                    ],
                    "cache-control": [
                        "no-cache"
                    ],
                    "azure-asyncnotification": [
                        "Enabled"
                    ],
                    "azure-asyncoperation": [
                        "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/providers/Microsoft.Network/locations/southcentralus/operations/2e31ee44-4ca9-4b74-8025-ac68c1e03891?api-version=2024-05-01&t=639262239964294856&c=MIIHxDCCBqygAwIBAgIRAK3GpGj7DjHLrjRJRX_HEXgwDQYJKoZIhvcNAQELBQAwNTEzMDEGA1UEAxMqQ0NNRSBHMSBUTFMgUlNBIDIwNDggU0hBMjU2IDIwNDkgQ1VTIENBIDAxMB4XDTI2MDkxNzE5NDgyOFoXDTI2MTIxMzAxNDgyOFowQDE-MDwGA1UEAxM1YXN5bmNvcGVyYXRpb25zaWduaW5nY2VydGlmaWNhdGUubWFuYWdl [...]
                    ]
                },
                "body": {
                    "string": ""
                }
            }
        },
        {
            "request": {
                "method": "GET",
                "uri": "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/providers/Microsoft.Network/networkSecurityGroups?api-version=2024-05-01",
                "body": null,
                "headers": {}
            },
            "response": {
                "status": {
                    "code": 200,
                    "message": "OK"
                },
                "headers": {
                    "x-ms-throttle-levels": [
                        "operationConcurrencyPct=0.5, subscriptionReadRatePct=0.2, etc"
                    ],
                    "x-ms-original-request-ids": [
                        "4a3d3a2e-6246-43a6-ad96-7fbaead8535c"
                    ],
                    "x-ms-ratelimit-remaining-subscription-global-reads": [
                        "3749"
                    ],
                    "x-ms-arm-service-request-id": [
                        "379c2433-5cde-4c88-9303-aaaaf17dee89"
                    ],
                    "content-length": [
                        "5173"
                    ],
                    "cache-control": [
                        "no-cache"
                    ],
                    "x-msedge-ref": [
                        "Ref A: 1BCB9CB92C7244D5A3FF51416ACB0264 Ref B: CHI261140505023 Ref C: 2026-09-28T20:26:36Z"
                    ],
                    "x-cache": [
                        "CONFIG_NOCACHE"
                    ],
                    "date": [
                        "Mon, 28 Sep 2026 20:26:37 GMT"
                    ],
                    "content-type": [
                        "application/json; charset=utf-8"
                    ]
                },
                "body": {
                    "data": {
                        "value": [
                            {
                                "name": "c7n-nsg-remove-rules",
                                "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules",
                                "etag": "W/\"a446b369-ca57-4571-affb-c6864a34ac90\"",
                                "type": "Microsoft.Network/networkSecurityGroups",
                                "location": "southcentralus",
                                "properties": {
                                    "provisioningState": "Succeeded",
                                    "resourceGuid": "7a749cea-eac1-420b-9cc9-66b20cd394c5",
                                    "securityRules": [],
                                    "defaultSecurityRules": [
                                        {
                                            "name": "AllowVnetInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/defaultSecurityRules/AllowVnetInBound",
                                            "etag": "W/\"a446b369-ca57-4571-affb-c6864a34ac90\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowAzureLoadBalancerInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                                            "etag": "W/\"a446b369-ca57-4571-affb-c6864a34ac90\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from azure load balancer",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "AzureLoadBalancer",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/defaultSecurityRules/DenyAllInBound",
                                            "etag": "W/\"a446b369-ca57-4571-affb-c6864a34ac90\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all inbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowVnetOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/defaultSecurityRules/AllowVnetOutBound",
                                            "etag": "W/\"a446b369-ca57-4571-affb-c6864a34ac90\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowInternetOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/defaultSecurityRules/AllowInternetOutBound",
                                            "etag": "W/\"a446b369-ca57-4571-affb-c6864a34ac90\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to Internet",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "Internet",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup-remove-rules/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg-remove-rules/defaultSecurityRules/DenyAllOutBound",
                                            "etag": "W/\"a446b369-ca57-4571-affb-c6864a34ac90\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all outbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ]
                                }
                            }
                        ]
                    }
                }
            }
        }
    ]
}
